# renderdiff

./: .gitignore  .gitmodules  Cargo.toml  package.json  rustfmt.toml  serverless.yml
api/: Cargo.toml  package.json  webpack.config.js  wrangler.toml
api/bench/: dummy.json
api/src/: lib.rs
api/tests/: web.rs
api/worker/: metadata_wasm.json  module.wasm  script.js  worker.js
benches/: difference_vs_dissimilar.rs  sample.txt  sample2.txt
migrations/2020-03-25-214229_initial_schema/: down.sql  up.sql
migrations/2020-03-28-212340_site_name/: up.sql
src/: lib.rs  main.rs  parser.rs
src/db/: mod.rs  models.rs  schema.rs
src/diff/: Cargo.toml
src/diff/src/: lib.rs
src/parser/: mod.rs  types.rs
web/: .nowignore  next.config.js  package.json  postcss.config.js  tailwind.config.js
web/api/: callback.ts  login.ts  logout.ts  me.ts
web/api/diff/: go.mod  index.go
web/api/diffrs/: Cargo.toml  index.rs
web/api/diffts/: index.ts
web/components/: Card.tsx  Dashboard.tsx  Footer.tsx  LinkSidebar.tsx  LoadMoreButton.tsx  LoginButton.tsx  RevisionButton.tsx  buttonHelpers.tsx
web/lib/: auth0.ts  config.ts  lib.ts
web/pages/: admin.tsx  index.tsx  search.tsx
web/pages/api/: callback.ts  diff.ts  login.ts  logout.ts  me.ts
web/pages/site/: [site].tsx
