[package]
name = "renderdiff"
version = "0.1.0"
authors = ["Jose Luis <joseluisr@twitter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4"
rayon = "1.3"
isahc = "0.9"
retry = "1.0"
diesel = { version = "1.4", features = ["sqlite","chrono","postgres"] }
dotenv = "0.15.0"
chrono = "0.4.11"
colored = "1.9.3"
serde = { version = "1.0.105", optional = true, features = ["derive"] }
diff = {path="src/diff"}
simplelog = "0.7.5"
log ="0.4.8"
url = "2.1.1"
[dev-dependencies]
difference = "2.0.0"
criterion = "0.3.1"
[[bench]]
name = "difference_vs_dissimilar"
harness = false
